2001-02-05	Eric Baudais  <baudais@okstate.edu>

	* lgpl/C/lgpl.sgml: Added the DTD, doh!

2001-02-05  	Eric Baudais  <baudais@okstate.edu>

	* Makefile.am: Added lgpl to Makefile.
	* lgpl/Makefile.am: Added Makefile for lgpl.
	* lgpl/C/Makefile.am: Added Makefile for lgpl.
	* lgpl/C/lgpl.sgml: Added the lgpl to the licenses.
12-16-00	Dan Mueth <d-mueth@uchicago.edu>

	* gpl/C/gpl.sgml: Added comment about authorship and version
	* fdl/C/fdl.sgml: Added comment about authorship and version

10-21-00	Dan Mueth <d-mueth@uchicago.edu>

	* Reviving this directory for core documents which other
	  packages rely on.  For now, this means the GPL and FDL 
	  licenses.  We will also add the LGPL and older versions
	  of the GPL here.
	* fdl/...: Added Eric Baudais' <baudais@okstate.edu> marked 
	  up FDL here. 
	* gdl/...: Added Eric Baudais' <baudais@okstate.edu> marked 
	  up GPL here. 
