@@ -38,8 +38,8 @@
     </articleinfo>
       
 
-  <sect1 id="fdl-preamble">
-    <title>0. PREAMBLE</title>
+  <sect1 id="fdl-preamble" label="0">
+    <title>PREAMBLE</title>
     <para>
       The purpose of this License is to make a manual, textbook, or
       other written document <quote>free</quote> in the sense of
@@ -69,8 +69,8 @@
       whose purpose is instruction or reference.
     </para>
   </sect1>
-  <sect1 id="fdl-section1">
-    <title>1. APPLICABILITY AND DEFINITIONS</title>
+  <sect1 id="fdl-section1" label="1">
+    <title>APPLICABILITY AND DEFINITIONS</title>
     <para id="fdl-document">
       This License applies to any manual or other work that contains a
       notice placed by the copyright holder saying it can be
@@ -160,8 +160,8 @@
     </para>
   </sect1>
     
-  <sect1 id="fdl-section2">
-    <title>2. VERBATIM COPYING</title>
+  <sect1 id="fdl-section2" label="2">
+    <title>VERBATIM COPYING</title>
     <para>
       You may copy and distribute the <link
       linkend="fdl-document">Document</link> in any medium, either
@@ -183,8 +183,8 @@
     </para>
     </sect1>
     
-  <sect1 id="fdl-section3">
-    <title>3. COPYING IN QUANTITY</title>
+  <sect1 id="fdl-section3" label="3">
+    <title>COPYING IN QUANTITY</title>
     <para>
       If you publish printed copies of the <link
       linkend="fdl-document">Document</link> numbering more than 100,
@@ -238,8 +238,8 @@
     </para>
     </sect1>
     
-  <sect1 id="fdl-section4">
-    <title>4. MODIFICATIONS</title>
+  <sect1 id="fdl-section4" label="4">
+    <title>MODIFICATIONS</title>
     <para>
       You may copy and distribute a <link
       linkend="fdl-modified">Modified Version</link> of the <link
@@ -253,10 +253,8 @@
       these things in the Modified Version:
     </para>
     
-    <itemizedlist mark="opencircle">
+    <itemizedlist mark="upper-alpha">
       <listitem>
-	<formalpara>
-	  <title>A</title>
 	  <para>
 	    Use in the <link linkend="fdl-title-page">Title
 	    Page</link> (and on the covers, if any) a title distinct
@@ -267,12 +265,9 @@
 	    use the same title as a previous version if the original
 	    publisher of that version gives permission.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>B</title>
 	  <para>
 	    List on the <link linkend="fdl-title-page">Title
 	    Page</link>, as authors, one or more persons or entities
@@ -282,44 +277,32 @@
 	    the <link linkend="fdl-document">Document</link> (all of
 	    its principal authors, if it has less than five).
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>C</title>
 	  <para>
 	    State on the <link linkend="fdl-title-page">Title
 	    Page</link> the name of the publisher of the <link
 	    linkend="fdl-modified">Modified Version</link>, as the
 	    publisher.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>D</title>
 	  <para>
 	    Preserve all the copyright notices of the <link
 	    linkend="fdl-document">Document</link>.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>E</title>
 	  <para>
 	    Add an appropriate copyright notice for your modifications
 	    adjacent to the other copyright notices.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>F</title>
 	  <para>
 	    Include, immediately after the copyright notices, a
 	    license notice giving the public permission to use the
@@ -327,12 +310,9 @@
 	    the terms of this License, in the form shown in the
 	    Addendum below.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>G</title>
 	  <para>
 	    Preserve in that license notice the full lists of <link
 	    linkend="fdl-invariant"> Invariant Sections</link> and
@@ -340,21 +320,15 @@
 	    Texts</link> given in the <link
 	    linkend="fdl-document">Document's</link> license notice.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>H</title>
 	  <para>
 	    Include an unaltered copy of this License.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>I</title>
 	  <para>
 	    Preserve the section entitled <quote>History</quote>, and
 	    its title, and add to it an item stating at least the
@@ -368,12 +342,9 @@
 	    describing the Modified Version as stated in the previous
 	    sentence.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>J</title>
 	  <para>
 	    Preserve the network location, if any, given in the <link
 	    linkend="fdl-document">Document</link> for public access
@@ -386,12 +357,9 @@
 	    itself, or if the original publisher of the version it
 	    refers to gives permission.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>K</title>
 	  <para>
 	    In any section entitled <quote>Acknowledgements</quote> or
 	    <quote>Dedications</quote>, preserve the section's title,
@@ -399,12 +367,9 @@
 	    each of the contributor acknowledgements and/or
 	    dedications given therein.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>L</title>
 	  <para>
 	    Preserve all the <link linkend="fdl-invariant">Invariant
 	    Sections</link> of the <link
@@ -412,31 +377,24 @@
 	    text and in their titles.  Section numbers or the
 	    equivalent are not considered part of the section titles.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>M</title>
 	  <para>
 	    Delete any section entitled
 	    <quote>Endorsements</quote>. Such a section may not be
 	    included in the <link linkend="fdl-modified">Modified
 	    Version</link>.
 	  </para>
-	</formalpara>
       </listitem>
       
       <listitem>
-	<formalpara>
-	  <title>N</title>
 	  <para>
 	    Do not retitle any existing section as
 	    <quote>Endorsements</quote> or to conflict in title with
 	    any <link linkend="fdl-invariant">Invariant
 	    Section</link>.
 	  </para>
-	</formalpara>
       </listitem>
     </itemizedlist>
     
@@ -487,8 +445,8 @@
     </para>
   </sect1>
     
-  <sect1 id="fdl-section5">
-    <title>5. COMBINING DOCUMENTS</title>
+  <sect1 id="fdl-section5" label="5">
+    <title>COMBINING DOCUMENTS</title>
     <para>
       You may combine the <link linkend="fdl-document">Document</link>
       with other documents released under this License, under the
@@ -523,8 +481,8 @@
     </para>
     </sect1>
     
-  <sect1 id="fdl-section6">
-    <title>6. COLLECTIONS OF DOCUMENTS</title>
+  <sect1 id="fdl-section6" label="6">
+    <title>COLLECTIONS OF DOCUMENTS</title>
     <para>
       You may make a collection consisting of the <link
       linkend="fdl-document">Document</link> and other documents
@@ -544,8 +502,8 @@
     </para>
     </sect1>
     
-  <sect1 id="fdl-section7">
-    <title>7. AGGREGATION WITH INDEPENDENT WORKS</title>
+  <sect1 id="fdl-section7" label="7">
+    <title>AGGREGATION WITH INDEPENDENT WORKS</title>
     <para>
       A compilation of the <link
       linkend="fdl-document">Document</link> or its derivatives with
@@ -568,8 +526,8 @@
     </para>
     </sect1>
     
-  <sect1 id="fdl-section8">
-    <title>8. TRANSLATION</title>
+  <sect1 id="fdl-section8" label="8">
+    <title>TRANSLATION</title>
     <para>
       Translation is considered a kind of modification, so you may
       distribute translations of the <link
@@ -587,8 +545,8 @@
     </para>
     </sect1>
     
-  <sect1 id="fdl-section9">
-    <title>9. TERMINATION</title>
+  <sect1 id="fdl-section9" label="9">
+    <title>TERMINATION</title>
     <para>
       You may not copy, modify, sublicense, or distribute the <link
       linkend="fdl-document">Document</link> except as expressly
@@ -601,8 +559,8 @@
     </para>
     </sect1>
     
-  <sect1 id="fdl-section10">
-    <title>10. FUTURE REVISIONS OF THIS LICENSE</title>
+  <sect1 id="fdl-section10" label="10">
+    <title>FUTURE REVISIONS OF THIS LICENSE</title>
     <para>
       The <ulink type="http"
       url="http://www.gnu.org/fsf/fsf.html">Free Software
@@ -628,7 +586,7 @@
     </para>
   </sect1>
 
-  <sect1 id="fdl-using">
+  <sect1 id="fdl-using" label="none">
     <title>Addendum</title>
     <para>
       To use this License in a document you have written, include a copy of
@@ -674,4 +632,3 @@
     </para>
   </sect1>
 </article>
-
