@@ -42,7 +42,7 @@
 
   </articleinfo>
 
-  <sect1 id="preamble">
+  <sect1 id="preamble" label="none">
     <title>Preamble</title>
     
     <para>
@@ -122,10 +122,10 @@
 
   </sect1>
 
-  <sect1 id="terms">
+  <sect1 id="terms" label="none">
     <title>TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION</title>
 
-    <sect2 id="sect0">
+    <sect2 id="sect0" label="0">
       <title>Section 0</title>
       <para>
 	This License applies to any program or other work which contains a notice 
@@ -148,7 +148,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect1">
+    <sect2 id="sect1" label="1">
       <title>Section 1</title>
       <para>
 	You may copy and distribute verbatim copies of the Program's source code as you 
@@ -165,7 +165,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect2">
+    <sect2 id="sect2" label="2">
       <title>Section 2</title>
       <para>
 	You may modify your copy or copies of the Program or any portion of it, thus 
@@ -236,7 +236,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect3">
+    <sect2 id="sect3" label="3">
       <title>Section 3</title>
 
       <para>
@@ -291,7 +291,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect4">
+    <sect2 id="sect4" label="4">
       <title>Section 4</title>
       
       <para>
@@ -303,7 +303,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect5">
+    <sect2 id="sect5" label="5">
       <title>Section 5</title>
 
       <para>
@@ -316,7 +316,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect6">
+    <sect2 id="sect6" label="6">
       <title>Section 6</title>
 
       <para>
@@ -328,7 +328,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect7">
+    <sect2 id="sect7" label="7">
       <title>Section 7</title>
 
       <para>
@@ -365,7 +365,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect8">
+    <sect2 id="sect8" label="8">
       <title>Section 8</title>
 
       <para>
@@ -377,7 +377,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect9">
+    <sect2 id="sect9" label="9">
       <title>Section 9</title>
       
       <para>
@@ -395,7 +395,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect10">
+    <sect2 id="sect10" label="10">
       <title>Section 10</title>
 
       <para>
@@ -407,7 +407,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect11">
+    <sect2 id="sect11" label="11">
       <title>NO WARRANTY</title>
       <subtitle>Section 11</subtitle>
 
@@ -421,7 +421,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect12">
+    <sect2 id="sect12" label="12">
       <title>Section 12</title>
 
       <para>
