@@ -39,7 +39,7 @@
 
   </articleinfo>
 
-  <sect1 id="preamble">
+  <sect1 id="preamble" label="none">
     <title>Preamble</title>
     
     <para>
@@ -183,10 +183,10 @@
 
   </sect1>
 
-  <sect1 id="terms">
+  <sect1 id="terms" label="none">
     <title>TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION</title>
 
-    <sect2 id="sect0">
+    <sect2 id="sect0" label="0">
       <title>Section 0</title>
       <para>
 	This License Agreement applies to any software library or other
@@ -232,7 +232,7 @@
 
     </sect2>
 
-    <sect2 id="sect1">
+    <sect2 id="sect1" label="1">
       <title>Section 1</title>
       <para>
 	You may copy and distribute verbatim copies of the Library's
@@ -251,7 +251,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect2">
+    <sect2 id="sect2" label="2">
       <title>Section 2</title>
       <para>
 	You may modify your copy or copies of the Library or any portion
@@ -330,7 +330,7 @@
 
     </sect2>
 
-    <sect2 id="sect3">
+    <sect2 id="sect3" label="3">
       <title>Section 3</title>
 
       <para>
@@ -356,7 +356,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect4">
+    <sect2 id="sect4" label="4">
       <title>Section 4</title>
       
       <para>
@@ -381,7 +381,7 @@
 
     </sect2>
 
-    <sect2 id="sect5">
+    <sect2 id="sect5" label="5">
       <title>Section 5</title>
 
       <para>
@@ -429,7 +429,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect6">
+    <sect2 id="sect6" label="6">
       <title>Section 6</title>
 
       <para>
@@ -524,7 +524,7 @@
 
     </sect2>
 
-    <sect2 id="sect7">
+    <sect2 id="sect7" label="7">
       <title>Section 7</title>
 
       <para>
@@ -555,7 +555,7 @@
       </orderedlist>	    
     </sect2>
 
-    <sect2 id="sect8">
+    <sect2 id="sect8" label="8">
       <title>Section 8</title>
 
       <para>
@@ -569,7 +569,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect9">
+    <sect2 id="sect9" label="9">
       <title>Section 9</title>
       
       <para>
@@ -584,7 +584,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect10">
+    <sect2 id="sect10" label="10">
       <title>Section 10</title>
 
       <para>
@@ -598,7 +598,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect11">
+    <sect2 id="sect11" label="11">
       <title>Section 11</title>
 
       <para>
@@ -641,7 +641,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect12">
+    <sect2 id="sect12" label="12">
       <title>Section 12</title>
 
       <para>
@@ -655,7 +655,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect13">
+    <sect2 id="sect13" label="13">
       <title>Section 13</title>
 
       <para>
@@ -676,7 +676,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect14">
+    <sect2 id="sect14" label="14">
       <title>Section 14</title>
 
       <para>
@@ -691,7 +691,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect15">
+    <sect2 id="sect15" label="15">
       <title>NO WARRANTY</title>
       <subtitle>Section 15</subtitle>
 
@@ -708,7 +708,7 @@
       </para>
     </sect2>
 
-    <sect2 id="sect16">
+    <sect2 id="sect16" label="16">
       <title>Section 16</title>
 
       <para>
