@@ -1,3 +1,9 @@
+2003-12-28  Eric Baudais  <drake@gnome.org>
+
+	* gpl/C/gpl.xml: Added the label tags for better processing.
+	* lgpl/C/lgpl.xml
+	* fdl/C/fdl.xml: Removed the formal paragraphs in section 4.
+
 2001-02-05	Eric Baudais  <baudais@okstate.edu>
 
 	* lgpl/C/lgpl.sgml: Added the DTD, doh!
